examples of for loops and re-arranging

--- a/1_html-css-javascript/Week_3/1_nicer_for_loop.html
+++ b/1_html-css-javascript/Week_3/1_nicer_for_loop.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Example of prompt()</title>
+  <title>For...In Loop</title>
   <script>
     var continents = ["Australia", "Africa", "Antartica", "Eurasia", "America"];
     var response, count = 0;
