--- a/1_html-css-javascript/Week_3/2_for_of_loop.html
+++ b/1_html-css-javascript/Week_3/2_for_of_loop.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Example of prompt()</title>
+  <title>For...Of Loop</title>
   <script>
     var continents = ["Australia", "Africa", "Antartica", "Eurasia", "America"];
     var response, count = 0;
@@ -11,9 +11,7 @@
       response = confirm("Have you been to " + continent + "?");
       if (response) count++;
     }
-
     alert("You have been to " + count + " continents");
-    // same thing can be done for objects as well
   </script>
 </head>
 
